<resources>
    <string name="app_name">乡镇通</string>
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="set">设置</string>
    <string name="zfzc">政府政策</string>
    <string name="zfzcluetop">全部</string>
    <string name="zfzcxxtop">详情</string>
    <string name="bmxx">便民信息</string>
    <string name="bmxxtop">便民信息</string>
    <string name="grjz">个人兼职</string>
    <string name="grjzluetop">兼职</string>
    <string name="grjzxxtop">详情</string>
    <string name="sjgg">商家广告</string>
    <string name="sjggluetop">商家广告</string>
    <string name="sjggxxtop">广告详情</string>
    <string name="gygg">公益广告</string>
    <string name="gyggluetop">公益广告</string>
    <string name="gyggxxtop">广告详情</string>
    <string name="ztss">主题设置</string>
</resources>
