<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="5dp"
    android:id="@+id/navcatcontainer">

    <LinearLayout
        android:id="@+id/cattop"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/zhengfuzhengce"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/zfbm"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/zfzc"
                android:textSize="16sp"
                android:textColor="@color/white"/>
            <ImageView
                android:layout_width="75dp"
                android:layout_height="85dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/zfzc"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bianminxinxi"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/zfbm"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/bmxx"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <ImageView
                android:layout_width="75dp"
                android:layout_height="85dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/bmxx"
                />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/gerenjianzhi"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/cattop"
        android:layout_centerInParent="true"
        android:background="@drawable/jz">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:layout_marginStart="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/grjz"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/grjz"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@id/gerenjianzhi"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/shangjiaguanggao"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/gg"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/sjgg"
                android:textSize="16sp"
                android:textColor="@color/white"/>
            <ImageView
                android:layout_width="75dp"
                android:layout_height="85dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/sjgg"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/gongyiguanggao"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gg"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/gygg"
                android:textSize="16sp"
                android:textColor="@color/white"/>
            <ImageView
                android:layout_width="75dp"
                android:layout_height="85dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/gygg"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>